[package]
name = "ingestor-rust"
version = "0.1.0"
authors = ["Adhocmaster-FW <gmuktadir@futurewei.com>"]
edition = "2018"

[dependencies]
futures = "0.1.28"
log = "0.4.6"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
tokio = "0.1.22"
rand = "0.7.0"
chrono = "0.4.7"
env_logger = "0.6.2"
clap = "2.33.0"

[dependencies.rdkafka]
version = "0.21.0"
features = ["ssl", "sasl"]